css/styles.css
body {
  font-family: "Lato", sans-serif;
  font-weight: 400;
}

h4 {
  font-weight: 700;
}

.navbar-brand img {
  width: 180px;
  height: auto;
}

.navbar-toggle img {
  width: 25px;
}

.ill-hero1 {
  background: url(../img/ill-hero1.png) no-repeat bottom left transparent;
  height: 300px;
  background-size: 90%;
}

.ill-hero2 {
  background: url(../img/ill-hero2.png) no-repeat bottom left transparent;
  height: 300px;
  background-size: 90%;
}

.ill-hero3 {
  background: url(../img/ill-hero3.png) no-repeat bottom left transparent;
  height: 300px;
  background-size: 90%;
}
.list-unstyled {
  color: #666;
}

#hero h2 {
  margin-top: 12%;
}

.carousel {
  margin-top: 8%;
}
.carousel p {
  margin-right: 18%;
}

.carousel-indicators li {
  background-color: rgba(0, 0, 0, 0.2);
  border: none;
}

.carousel-indicators .active {
  background-color: rgba(0, 0, 0, 0.4);
}

@media only screen and (max-width: 992px) {
  .ill-hero1 {
    height: 400px;
  }
}

@media only screen and (max-width: 540px) {
  .ill-hero1 {
    background-size: 100%;
    height: 320px;
  }
}

#services {
  padding: 80px 0;
  background: #f7f7f7;
}

#contact {
  padding: 80px 0;
  background: #f7f7f7;
}

.profiles img {
  border-radius: 50%;
  width: 40%;
  border: 4px solid #fff;
}

.ico {
  margin: 40px 0 20px 0;
}

/* portfolio section */
#portfolio {
  padding: 80px 0;
}

.img-fluid {
  width: 100%;
  height: auto;
}

.padding-top {
  padding-top: 60px;
}

/* ----------------------- Packages Page CSS -------------------------- */

.master-title {
  text-align: center;
  margin-bottom: 30px;
}

.card {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  transition: 0.3s;
  width: 100%;
  height: 600px;
  text-align: center;
  padding-top: 20px;
  font-size: 10px;
  background-color: #fff;
}

.card:hover {
  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
}

.card-header {
  height: 130px;
}

/* .container {
  padding: 2px 16px;
} */

.card p {
  padding: 20px 30px;
}

#basicPlanCollapse,
#premiumPlanCollapse {
  width: 100%;
  padding: 10px;
  height: 150px;
  font-size: 12px;
  text-align: justify;
}

hr {
  padding: 10px 30px;
}

.price-font {
  font-weight: lighter;
}

#basic-title {
  color: rgb(49, 49, 49);
}

#premium-title {
  color: rgb(222, 200, 96);
}

#business-title {
  color: rgb(213, 94, 207);
}

#enterprise-title {
  color: rgb(81, 159, 191);
}

#enterprisePlanDesc {
  width: 100%;
  padding: 10px 10px;
  text-align: center;
  background-color: #ffffff;
  margin-top: 10px;
  font-size: 12px;
}

#basic-title,
#business-title,
#premium-title,
#enterprise-title {
  font-weight: 100;
}

.plans-list {
  list-style-type: none;
  padding-left: 20px;
}

.plans-list li {
  text-align: left;
}

.plans-list li.row {
  margin: 0;
}

.span-checkmark {
  font-size: 15px;
  color: green;
  padding-left: 10px;
}

.no-checkmark {
  color: #fff;
}

.span-planBullet {
  font-size: 12px;
  color: rgb(84, 84, 84);
  padding-left: 10px;
}

footer {
  background-color: rgb(84, 84, 84);
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  text-align: center;
  color: #ffffff;
  margin-top: 40px;
  height: 40px;
}

footer p {
  padding-top: 10px;
}

